--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <title>Sharing carrying</title>
 </head>
 
-<body>
+<body ID="anima">
     <div class="container-fluid bodybg">
         <nav class="navbar navhead navbarmargin">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarhead">
-                        <span class="glyphicon glyphicon-fire"></span>
+                        <span class="glyphicon glyphicon-menu-hamburger"></span>
                     </button>
                     <div class="navbar-brand">LOGO</div>
                 </div>
                 <div class="collapse navbar-collapse text-primary" id="navbarhead">
                     <ul class="nav navbar-nav navbarlist">
                         <li class="active"><a href="#Home">Home</a></li>
-                        <li class="dropdown dropdowncolor ">
+                        <li class="dropdown ">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">
                                 Sevices <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu dropdowncolor text-primary">
-                                <li><a href="#BookPdf">book pdfs</a></li>
+                                <li><a href="#BookPdf">Book pdfs</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#CourseVid">course videos</a></li>
                                 <li class="divider"></li>
@@ -39,12 +39,12 @@
                     </ul>
                     <ul class="navbar-nav nav navbar-right">
                         <li><a href="#Privacy">Privacy-Policy</a></li>
-                        <li class="dropdown dropdowncolor">
+                        <li class="dropdown">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">
                                 More
                                 <span class="caret"></span>
                             </a>
-                            <ul class="dropdown-menu dropdowncolor in">
+                            <ul class="dropdown-menu dropdown-menu-right dropdowncolor">
                                 <li><a href="#Contact">Contact us</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#GoogleForm">google form</a></li>
@@ -66,11 +66,12 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid home" id="Home">
-            <div class="jumbotron home">
-                <h1 class="text-center fontcolor">Sharing carrying</h1>
+        <div class="container-fluid home">
+            <div class="jmb ">
+
+                <h1 class="text-center" id="jmbcolor">Sharing carrying</h1>
                 <hr>
-                <p class="text-center">by mr x</p>
+                <p class="text-center" id="jmbcolor">by mr x</p>
             </div>
             <blockquote class="blockquote-reverse blockquotecolor">
                 <h3 id="orangeredcolor">Sharing !</h3>
@@ -83,12 +84,12 @@
                 <footer>mrxforever</footer>
             </blockquote>
         </div>
-        <div class="container ourservice" id="Services">
-            <h2 class="text-center fontcolor">Our Services</h2>
+        <div class="container-fluid ourservice" id="Services">
+            <h2 class="text-center">Our Services</h2>
             <div class="row" id="About">
                 <div class="col-lg-6 text-center">
                     <button class="btn btn-info" id="BookPdf">
-                        book Pdf's <span class="label label-danger">New !</span>
+                        Book Pdf's <span class="label label-danger">New !</span>
                     </button>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -103,7 +104,7 @@
             <hr>
             <p class="text-center">
                 we dont collect any of your data . we just providing this services for <code class=" code"><abbr
-                        title="EDUCATION Purpose Only">EDUCATION</abbr></code> Purpose only . <br><br>
+                        title="EDUCATION Purpose Only">EDUCATIONAL</abbr></code> Purpose only . <br><br>
                 We don't Track your phone also dont collect your <code>(Passwords , data , Location)</code> we dont use
                 any cookie's.
                 Just providing this services for EDUCATION purpose only .
@@ -115,9 +116,9 @@
                 Thank You <span class="label label-warning">Thank you !</span>
             </p>
         </div>
-        <div class="container-fluid fontcolor abtus">
-            <h3 class="text-center" id="orangeredcolor">Abouts us</h3>
-            <div class="row" id="About">
+        <div class="container-fluid fontcolor abtus" id="About">
+            <h3 class="text-center" id="About1">Abouts us</h3>
+            <div class="row">
                 <div class="col-sm-6 text-center">
                     <div class="contactimage"><img
                             src="https://www.pngjoy.com/pngl/195/3846132_contact-icons-contact-us-icon-png-white-transparent.png"
@@ -133,7 +134,7 @@
                     <p>about</p>
                 </div>
             </div>
-            <footer class="text-center">
+            <footer class="text-center footer1">
                 <ul class="breadcrumb">
                     <li><a href="#" id="Contact">Contact us</a></li>
                     <li><a href="#" id="GoogleForm">Google Forms</a></li>
