--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarhead">
                         <span class="glyphicon glyphicon-menu-hamburger"></span>
                     </button>
-                    <div class="navbar-brand">WoreWo</div>
+                    <div>
+                        <img src=" Worewopsd.png" class="img-responsive" alt="LOGO" id="LOGO" srcset="">
+                    </div>
                 </div>
                 <div class="collapse navbar-collapse text-primary" id="navbarhead">
                     <ul class="nav navbar-nav navbarlist">
@@ -69,114 +71,91 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid" id="Home1">
-            <div class="img-fluid img-thumbnail">
-                <img src="https://wallpapercave.com/wp/wp2003339.jpg" style="width: 100%; height: 300px; "
-                    alt="albertimage" srcset="">
-            </div>
+        <div id="Home1">
             <div class="jmb home">
-                <h1 class="text-center" id="jmbcolor">Sharing carrying</h1>
-                <hr>
-                <p class="text-center" id="jmbcolor">by mr x</p>
+                <div class="qts ">
 
-                <blockquote class="blockquote blockquotecolor">
-                    <h3 id="orangeredcolor">Sharing !</h3>
-                    <p class="quotes">
-                        "Gaining Knowledge " , is the first Step to wisdom . <br>
-                        Sharing it , is the first step to Humanity .
-                    </p>
-                    <footer>unknown</footer>
-                </blockquote>
+                </div>
             </div>
         </div>
         <div class="container-fluid">
             <h1 class="text-center" id="orangeredcolor">Our Catalogue's</h1>
-
-            <div id="carousel" class="carousel slide" data-ride="carousel">
-
-
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel" data-slide-to="1"></li>
-                    <li data-target="#carousel" data-slide-to="2"></li>
-                    <li data-target="#carousel" data-slide-to="3"></li>
-                </ol>
-
-
-                <div class="carousel-inner" role="listbox">
-
-                    <div class="item active">
-                        <img src="https://wallpapercave.com/wp/wp3194653.jpg" class="img-thumbnail">
-                        <div class="carousel-caption">
-                            <h2>Head 1</h2>
-                            <p>Content 1</p>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <img src="https://wallpapercave.com/wp/wp3194653.jpg" class="img-thumbnail">
-                        <div class="carousel-caption">
-                            <h2>Head 2</h2>
-                            <p>Content 2</p>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <img src="https://wallpapercave.com/wp/wp3194653.jpg" class="img-thumbnail">
-                        <div class="carousel-caption">
-                            <h2>Head 3</h2>
-                            <p>Content 3</p>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <img src="https://wallpapercave.com/wp/wp3194653.jpg" class="img-thumbnail">
-                        <div class="carousel-caption">
-                            <h2>Head 4</h2>
-                            <p>Content 4</p>
-                        </div>
-                    </div>
-
-                </div>
-                <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                </a>
-            </div>
-
             <div class="ourservice" id="Services">
-                <h2 class="text-center">For More </h2>
-                <div class="row" id="About">
-                    <div class="col-lg-6 text-center">
-                        <button class="btn btn-info" id="BookPdf">
-                            Book's Catalog
-                            <span class="label label-danger">New !</span>
-                        </button>
+                <div class="test123">
+                    <div>
+                        <article>
+                            <a href="https://drive.google.com/drive/folders/0B40Zq8oPjgbsfi1yS2xEdTY4OG5wSS1XNjk1c0s3MFlERFhaa1EzLUMtb05Oa05GRzNkbEU?usp=sharing"
+                                target="_blank">
+                                <img src="https://www.tutorialspoint.com/images/Python.png" alt="Python" /> </a>
+                            <h4>PYTHON</h4>
+
+                        </article>
+                        <article>
+                            <a href="#" target="_blank">
+                                <img src="https://www.tutorialspoint.com/images/java8.png" alt="python" /></a>
+                            <h4>java</h4>
+                        </article>
                     </div>
-                    <div class="col-lg-6 text-center">
-                        <button class="btn btn-info" id="CourseVid">
-                            Course Catalog <span class="label label-danger">New !</span>
-                        </button>
+                </div>
+                <div class="test123">
+                    <div>
+                        <article>
+                            <a href="#" target="_blank">
+                                <img src="https://www.tutorialspoint.com/images/Python.png" alt="python" /></a>
+                            <h4>Python</h4>
+                        </article>
+                        <article>
+                            <a href="#" target="_blank">
+                                <img src="https://www.tutorialspoint.com/images/java8.png" alt="python" /></a>
+                            <h4>java</h4>
+                        </article>
+                    </div>
+                </div>
+                <div class="test123">
+                    <div>
+                        <article>
+                            <a href="#" target="_blank">
+                                <img src="https://www.tutorialspoint.com/images/Python.png" alt="python" /></a>
+                            <h4>Python</h4>
+                        </article>
+                        <article>
+                            <a href="#" target="_blank">
+                                <img src="https://www.tutorialspoint.com/images/java8.png" alt="python" /></a>
+                            <h4>java</h4>
+                        </article>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <h2>Note :</h2>
+            <p>For requesting courses and Provide feedbacks<br>
+                <code>Email :</code> Click<a href="mailto:worewoedu@gmail.com?subject=Request and provide feedbacks ."
+                    target="_blank">
+                    here</a>
+                <br>
+                <code>Google form :</code> Click<a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSdC1o2P6p1ps9w2XSI3had1gRQeJwDB3gZ-VB0g7KDLtCPUFQ/viewform?usp=pp_url"
+                    target="_blank"> here</a>
+            </p>
+
+        </div>
+
         <div class="container privacy" id="Privacy">
             <h4 class="text-center text-success terms">Privacy-Terms-Conditions</h4>
             <hr>
             <p class="text-center">
-                we don,t collect any of your data's . we don't ask any of your phone permisssion's .<br><br>
-                We don't Track your phone Location and data's like your <code>(Passwords , cam's , Location ,
+                We don't collect any of your data's . we don't ask any of your phone permisssion's .<br><br>
+                We don't Track your phone Location and data's like your <code>(Passwords , cam's , Location
+                    ,
                     etc)</code>.
-                we
+                We
                 Never use
                 any cookie's . <br><br>
-                Just providing this services for <code class=" code"><abbr
-                        title="EDUCATION Purpose Only">EDUCATIONAL</abbr></code> purpose's only .
+                Just providing this services for <code class="code"><abbr
+                        title="EDUCATIONAL Purpose Only">EDUCATIONAL</abbr></code> purpose's only .
                 <br><br>
-                <kbd>Use this chance to grow up your skil's.</kbd>
+                <kbd>Use this chance to grow up your skill's.</kbd>
                 <br><br>
                 Sharing !
                 <br><br>
@@ -186,26 +165,33 @@
         <div class="container-fluid fontcolor abtus" id="About">
             <h3 class="text-center" id="About1">Abouts us</h3>
             <div class="row">
-                <div class="col-sm-6 text-center">
-                    <div class="contactimage"><img
-                            src="https://www.pngjoy.com/pngl/195/3846132_contact-icons-contact-us-icon-png-white-transparent.png"
-                            class="img-responsive"></div>
-                    <h4>Name</h4>
-                    <p>about</p>
-                </div>
-                <div class=" col-sm-6 text-center">
+                <div class="col-sm-12 text-center">
                     <div class="contactimage">
                         <img src="https://www.pngjoy.com/pngl/195/3846132_contact-icons-contact-us-icon-png-white-transparent.png"
                             class="img-responsive"></div>
-                    <h4>Name</h4>
-                    <p>about</p>
+                    <h4>worewoedu@gmail.com</h4>
+                    <p>Volunteer's to share knowledge</p>
+                </div>
+                <div class="col-sm-12">
+                    <blockquote class="blockquote-reverse blockquotecolor">
+                        <h3 id="orangeredcolor">Sharing !</h3>
+                        <p class="quotes">
+                            "Gaining Knowledge " , is the first Step to wisdom . <br><br>
+                            "Sharing It" , is the first step to Humanity .
+                        </p>
+                        <footer>unknown</footer>
+                    </blockquote>
                 </div>
             </div>
             <footer class="text-center footer1">
                 <ul class="breadcrumb">
-                    <li><a href="#" id="Contact"><span class="glyphicon glyphicon-envelope"></span> Contact us</a></li>
+                    <li><a href="#" id="Contact"><span class="glyphicon glyphicon-envelope"></span> Contact
+                            us</a>
+                    </li>
                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdC1o2P6p1ps9w2XSI3had1gRQeJwDB3gZ-VB0g7KDLtCPUFQ/viewform?usp=pp_url"
-                            id="GoogleForm" target="_blank">Google form</a></li>
+                            id="GoogleForm" target="_blank"><span class="glyphicon glyphicon-file"></span>
+                            Google
+                            form</a></li>
                 </ul>
             </footer>
 </body>
