--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right dropdowncolor">
-                                <li><a href="#Contact">Contact us
+                                <li><a href="mailto:worewoedu@gmail.com?subject=Request and provide feedbacks ."
+                                    target="_blank">Contact us
                                     </a></li>
                                 <li class="divider"></li>
                                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdC1o2P6p1ps9w2XSI3had1gRQeJwDB3gZ-VB0g7KDLtCPUFQ/viewform?usp=pp_url"
@@ -185,7 +186,8 @@
             </div>
             <footer class="text-center footer1">
                 <ul class="breadcrumb">
-                    <li><a href="#" id="Contact"><span class="glyphicon glyphicon-envelope"></span> Contact
+                    <li><a href="mailto:worewoedu@gmail.com?subject=Request and provide feedbacks ."
+                        target="_blank" id="Contact"><span class="glyphicon glyphicon-envelope"></span> Contact
                             us</a>
                     </li>
                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdC1o2P6p1ps9w2XSI3had1gRQeJwDB3gZ-VB0g7KDLtCPUFQ/viewform?usp=pp_url"
